--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Speech Detection</title>
+  <script type="text/javascript" src="https://unpkg.com/webcam-easy/dist/webcam-easy.min.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+<center>
+    <video id="webcam" autoplay playsinline></video>
+    <canvas id="canvas" class="d-none"></canvas>
+    <audio id="snapSound" src="audio/snap.wav" preload="auto"></audio>
+</center>
   <div class="words" contenteditable>
   </div>
 
